--- a/installer/dockerfile/scheduler/Dockerfile
+++ b/installer/dockerfile/scheduler/Dockerfile
@@ -12,13 +12,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM golang:1.24.0 AS builder
+FROM registry-public.lenovo.com/library/golang:1.24-bullseye AS builder
 WORKDIR /go/src/volcano.sh/
+ENV GOPROXY="https://goproxy.cn,direct"
 COPY go.mod go.sum ./
 RUN go mod download
 ADD . volcano
 RUN cd volcano && make vc-scheduler
 
-FROM alpine:latest
+FROM registry-public.lenovo.com/library/alpine:3.22
 COPY --from=builder /go/src/volcano.sh/volcano/_output/bin/vc-scheduler /vc-scheduler
 ENTRYPOINT ["/vc-scheduler"]
